<resources>
    <string name="app_name">儿童腕表</string>
    <string name="aboutus">关于我们</string>
    <string name="action_settings">Settings</string>
    <string name="hello_Watch">Hello world!</string>
    <string name="dialog_title">验证短信已发出</string>
    <string name="dialog_body_text">提示</string>
    <string name="dialog_close">关闭</string>
    <string name="scan_activity_tips_text">请扫描说明书中的二维码</string>
    <string name="compele">完成</string>
    <string name="scansuccess">扫描成功</string>
    <string name="noworktoverificate">本机无网络</string>
    <string name="namenocontainsapce">昵称中不能留有空格</string>
    <string name="editphonenum">请输入正确的手机号码</string>
    <string name="selectRelactionship">请选择成员关系</string>
    <string name="activitewatch">激活腕表(3/4)</string>
    <string name="next">下一步</string>
    <string name="addbaby">添加宝贝(4/4)</string>
    <string name="alertsafe">修改安全区域</string>
    <string name="taking">按住说话</string>
    <string name="tryagain">重试</string>
    <string name="gaode_nodata">喔，没有搜索到相关数据，请稍候重试！</string>
    <string name="gaode_networkproblem">搜索失败,请检查网络连接！</string>
    <string name="gaode_keyunusable">key验证无效！</string>
    <string name="gaode_unknow">未知错误，请稍候重试！错误码为</string>
    <string name="gaode_near">附近</string>
    <string name="saferadiu">米半径安全区域</string>
    <string name="saving">正在保存</string>
    <string name="networkunusable">本机无网络</string>
    <string name="gettingdata">正在获取数据，请稍候......</string>
    <string name="serverbusy">服务器繁忙，请稍后重试</string>
    <string name="app_describe">腕表APP与云端驱动来自魔豹技术</string>
    <string name="phonenum">手机号码</string>
    <string name="password">密码</string>
    <string name="or">---------------  或   ---------------</string>
    <string name="forger_password">忘记密码？</string>
    <string name="register">注册帐号</string>
    <string name="main_location">定位</string>
    <string name="main_chat">对话</string>
    <string name="main_mothion">运动</string>
    <string name="main_reword">奖励</string>
    <string name="main_more">更多</string>
    <string name="babynotnoline">宝贝不在线，无法获取最新位置</string>
    <string name="positioning">请稍等，正在获取您的位置...</string>
    <string name="nowdaynodata">没有位置信息</string>
    <string name="safearea">安全区域</string>
    <string name="addsafearea">添加地点</string>
    <string name="addsafearea1">添加地点</string>
    <string name="xlistview_header_hint_normal">下拉加载数据</string>
    <string name="xlistview_header_hint_ready">松开获取数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal">查看上一个月数据</string>
    <string name="xlistview_footer_hint_ready">松开获取数据</string>
    <string name="Ilistview_header_hint_normal">下拉加载下一个月数据</string>
    <string name="Ilistview_header_hint_ready">松开获取下一个月数据</string>
    <string name="Ilistview_header_hint_loading">正在加载...</string>
    <string name="Ilistview_header_last_time"></string>
    <string name="Ilistview_footer_hint_normal">查看更多数据</string>
    <string name="Ilistview_footer_hint_ready">松开获取数据</string>
    <string name="safearea_300">300米半径安全区域</string>
    <string name="setgoal">设定目标</string>
    <string name="agree">同意</string>
    <string name="sure">确定</string>
    <string name="refuse">拒绝</string>
    <string name="selecttime">选择时间</string>
    <string name="familymember">家庭成员</string>
    <string name="monitor">监听</string>
    <string name="callphone">打电话</string>
    <string name="messagecenter">消息中心</string>
    <string name="levaed">已离开</string>
    <string name="loginmessage">登录信息(1/4)</string>
    <string name="moreset">更多设置</string>
    <string name="phoneandbabymanger">手表管理</string>
    <string name="saveset">省电设置</string>
    <string name="setslience">"设置手表静音 "</string>
    <string name="sos">SOS记录</string>
    <string name="help">帮助</string>
    <string name="other">"关于与反馈 "</string>
    <string name="gold">目标</string>
    <string name="steep0">0步</string>
    <string name="kaluli">卡路里</string>
    <string name="changsametime">选择重复日期</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="timebacuke1">时间段1</string>
    <string name="save">保存</string>
    <string name="begintime">开始时间</string>
    <string name="day">白天</string>
    <string name="endtime">结束时间</string>
    <string name="night">夜间</string>
    <string name="timebacket">时间段</string>
    <string name="week">周一 周二 周三 周四 周五 周六 周日</string>
    <string name="slicenatimebucket">静音时间段</string>
    <string name="timebucket2">时间段2</string>
    <string name="timebucket3">时间段3</string>
    <string name="savemode">省电模式</string>
    <string name="locatedinterval">腕表定位间隔</string>
    <string name="towminute">2分钟</string>
    <string name="tenminute">10分钟</string>
    <string name="thrityminute">30分钟</string>
    <string name="setreward">设定奖励</string>
    <string name="startnum">您发给宝贝的累计星星</string>
    <string name="watchrank">腕表端累计星级</string>
    <string name="home">家</string>
    <string name="takephoto">拍照</string>
    <string name="selectfromalbum">从相册中选择</string>
    <string name="selectarearadiu">请选择安全区域半径</string>
    <string name="meter_300">300米</string>
    <string name="meter_400">400米</string>
    <string name="meter_500">500米</string>
    <string name="meter_1000">1000米</string>
    <string name="editcode">输入验证码(2/4)</string>
    <string name="messagesend">验证短信已发出</string>
    <string name="addnewwatch">添加新腕表</string>
    <string name="serialnum">序列号:</string>
    <string name="addtime">绑定时间:</string>
    <string name="loginview">登录页面</string>
    <string name="registview">注册页面</string>
    <string name="activitycode">二维码激活</string>
    <string name="activitewacth1">激活腕表</string>
    <string name="babyinfo">宝贝信息</string>
    <string name="editinfo">编辑信息</string>
    <string name="setheadimage">请先设置头像</string>
    <string name="editwatchphone">请输入腕表的手机号码</string>
    <string name="babylocatechange">宝贝位置改变提示</string>
    <string name="palyfailer">语音播放失败</string>
    <string name="reached">已到达</string>
    <string name="enter">进入</string>
    <string name="month">月</string>
    <string name="timeshort">录音时间太短</string>
    <string name="getbabyphoneerror">获取当前宝贝的手机号码失败！原因：</string>
    <string name="nomotiondata">没有运动数据</string>
    <string name="getdataerror">获取数据失败!原因：</string>
    <string name="successsetgold">成功设定目标!</string>
    <string name="goldalterfail">目标修改失败！原因：</string>
    <string name="startsiszero">星星已减少到0</string>
    <string name="noempty">内容不能为空</string>
    <string name="editstart">请输入星星个数（1-10之间）</string>
    <string name="datasavesuccess">数据保存成功!</string>
    <string name="datasaveerror">数据保存失败!原因：</string>
    <string name="codeworng">验证码错误</string>
    <string name="codesended">验证码已经发出</string>
    <string name="getcodefial">获取验证码失败</string>
    <string name="registersuccess">注册成功！！</string>
    <string name="registerror">注册失败！原因：</string>
    <string name="nonetworknotexit">无效二维码</string>
    <string name="unknowcode">无效二维码</string>
    <string name="nopermission">对不起，您没有权限添加腕表！</string>
    <string name="watchexisted">您已添加过此腕表</string>
    <string name="applitejoin1">该腕表已被管理员(</string>
    <string name="applitejoin2">)激活，是否申请进入其家庭圈？</string>
    <string name="wacthisActivited">该腕表已被其他管理员腕表激活，联系方式：</string>
    <string name="codeiunusable">腕表不在线！</string>
    <string name="watchbeadd">该腕表已被其他管理员绑定，联系方式：</string>
    <string name="pleaseeditname">请输入昵称</string>
    <string name="pleaseeditage">请输入年龄</string>
    <string name="pleaseedittrueage">请输入正确的年龄</string>
    <string name="pleaseeidtheight">请输入身高</string>
    <string name="pleaseedittrueheight">请输入正确的身高</string>
    <string name="sendrequestsuccess1">发送请求成功，请等待管理员(</string>
    <string name="sendrequestsuccess2">)审核</string>
    <string name="savesuccess">保存成功</string>
    <string name="savefail">保存失败</string>
    <string name="alertsuccess">修改成功</string>
    <string name="alerterror">修改异常</string>
    <string name="inputpassword">请输入您的登录密码</string>
    <string name="logining">正在登陆.....</string>
    <string name="register_ing">正在注册...</string>
    <string name="nonetwork">本机无网络</string>
    <string name="networkanomaly">本机无网络</string>
    <string name="nodata">没有更多数据</string>
    <string name="pleasewait">请稍候，正在努力获取......</string>
    <string name="pleasewait_regist">正在注册.....</string>
    <string name="loginsuccess">登陆成功！</string>
    <string name="token_notban">当前token未绑定账号！请绑定账号！</string>
    <string name="login_nobaby">您尚未填加宝贝，请扫码添加！</string>
    <string name="login_shenhe1">号码为</string>
    <string name="login_shenhe2">的管理员正在审核您的请求</string>
    <string name="login_disavow">您的申请被管理员拒绝，请重新扫码或添加其他腕表！</string>
    <string name="login_fail">登陆失败！原因:</string>
    <string name="step_danwei">步</string>
    <string name="lv">级</string>
    <string name="setnowtotal">设定新的目标</string>
    <string name="intototal">恭喜宝贝已完成目标，按\"确定\"设定新的目标。如果星星加多了，可按\"减少\"</string>
    <string name="remove">减少</string>
    <string name="removeallstar">是否清空已有的星星</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="isremoveallstar">请确认您已奖励了星星给宝贝</string>
    <string name="please_input_new_password">请输入新的密码！</string>
    <string name="phone_number_can_not_null">手机号码不能空</string>
    <string name="password_can_not_null">密码不能空</string>
    <string name="monitor_baby">监听宝贝</string>
    <string name="call_watch_phone">拨打手表号码</string>
    <string name="loosen_and_send">松开发送</string>
    <string name="hold_press_on_and_say">按住说话</string>
    <string name="_9_grade">9级</string>
    <string name="grade">级</string>
    <string name="_0_grade">0级</string>
    <string name="set_update_new_goal">设定新的目标</string>
    <string name="complete_goal_tip">恭喜宝贝已完成目标，点击确定将设置新的目标，或减少星星。</string>
    <string name="reduce">减少</string>
    <string name="if_clear_all_star">是否清空已有的星星</string>
    <string name="set_reward">设定奖励</string>
    <string name="these_menber_request_join">以下成员要求加入</string>
    <string name="call_baby_fail">拨打宝贝电话失败</string>
    <string name="login_success">登陆成功！</string>
    <string name="_token_">当前token未绑定账号！请绑定账号！</string>
    <string name="you_has_not_add_baby">您尚未填加宝贝，请扫码添加！</string>
    <string name="server_busy">服务器繁忙，请稍候重试</string>
    <string name="no_internet">网络不可用，请打开网络或稍后重试</string>
    <string name="wait">等待</string>
    <string name="_retryu">" 秒后还没收到短信请重试"</string>
    <string name="ornosaveinfo">是否保存信息？</string>
    <string name="saferadiu300">300米半径安全区域</string>
    <string name="editsafeareaname">请输入安全位置名称</string>
    <string name="editsafeareaaddress">请输入安全位置地址，长按地图可自动输入</string>
    <string name="gettingaddress">正在获取地址</string>
    <string name="nowdatenomemberdata">当前没有家庭成员信息</string>
    <string name="notsetsafearea">当前宝贝没有设置安全位置</string>
    <string name="suredeletesafearea">确定删除?</string>
    <string name="deletesuccess">删除成功</string>
    <string name="deletefail">删除失败</string>
    <string name="get_date_ing">正在获取数据…</string>
    <string name="week1">周一</string>
    <string name="week2">周二</string>
    <string name="cancel">取消</string>
    <string name="sex">性别:</string>
    <string name="weight">体重 (kg):&#160;&#160;</string>
    <string name="steep">步长（cm）</string>
    <string name="hit_Age">年        龄:&#160;&#160;</string>
    <string name="hit_sex">性        别:&#160;&#160;</string>
      <string name="height">身高(cm):&#160;&#160;</string>
    <string name="hit_steplong">步长(cm):&#160;&#160;</string>
    <string name="dateofbirth">出生日期:&#160;&#160;</string>
    <string name="wristwatchbabydateofbirth">腕表宝贝的出生年月日</string>
    <string name="ignore">跳过此步骤</string>
    	<string name="edit_hit_Age">腕表宝贝的年龄</string>
    <string name="edit_hit_height">腕表宝贝的身高</string>
    <string name="edit_hit_weight">腕表宝贝的体重</string>
</resources>