<?xml version="1.0" encoding="utf-8"?>
<!-- 安全区域范围选择弹出框 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F3F3F3"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="#2989D4"
            android:gravity="center"
            android:text="@string/selectarearadiu"
            android:textColor="#FFF"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_300"
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/public_bg"
            android:gravity="center"
            android:text="@string/meter_300"
            android:textColor="#FFF"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_400"
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/public_bg"
            android:gravity="center"
            android:text="@string/meter_400"
            android:textColor="#FFF"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_500"
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/public_bg"
            android:gravity="center"
            android:text="@string/meter_500"
            android:textColor="#FFF"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_1000"
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/public_bg"
            android:gravity="center"
            android:text="@string/meter_1000"
            android:textColor="#FFF"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="@dimen/dimen_290dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:background="#6F7276"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>